- mdkapplet:
  o do not check for network while checking for updates
  o do not show icon while waiting for initial check
  o do not skip first RPM check (change made in 2.16 in march 2007)
  o do not start network cyclic checks before first media test (#38991)
  o check for network just before first check
  o reduce resident size by 1.5MB (5.4%)

Version 2.38 - 20 March 2008, Thierry Vignaud

- do not display "install updates" button when notifying about network
  being down
  (regression introduced in 2.35: "offer to install updates in
  notifications")

Version 2.37 - 19 March 2008, Olivier Blin

- simplify network detection

Version 2.36 - 14 March 2008, Thierry Vignaud

- mdkapplet:
  o bump copyright year
  o do not check for network before first media test (#38991)

Version 2.35 - 14 March 2008, Thierry Vignaud

- mdkapplet:
  o offer to install updates in notifications

Version 2.34 - 12 March 2008, Thierry Vignaud

- mdkapplet:
  o do not keep complaining if nightly update cron had failled (#38531)

Version 2.33 - 10 March 2008, Thierry Vignaud

- mdkapplet:
  o adapt to urpmi-5.9 (#38724)

Version 2.32 - 5 March 2008, Thierry Vignaud

- mdkapplet:
  o check more often for network (#37701, #38004)
  o do not crash if notfiy failed on ->show (#38496)
  o do not notify if no network if already done
  o make sure notifications' text doesn't got truncated
  o use more modern API to check for updates

Version 2.32 - Tue Feb 26 2008, Thierry Vignaud
- lazy load Rpmdrake::open_db so that urpm really is lazy loaded at
  runtime when forking checker

Version 2.31 - Tue Feb 26 2008, Thierry Vignaud
- make sure notifications' text doesn't got truncated

Version 2.30 - Mon Feb 18 2008, Thierry Vignaud
- update inactive backport media (#34620)

Version 2.29 - Tue Feb  5 2008, Thierry Vignaud
- increase initial check delayed from 60 seconds to 5 minutes
- make sure to not display any bubbles at all if no updates (#37451)
- really set nice priority