@@ -4,7 +4,8 @@
   o do not skip first RPM check (change made in 2.16 in march 2007)
   o do not start network cyclic checks before first media test (#38991)
   o check for network just before first check
-  o reduce resident size by 1.5MB (5.4%)
+  o kill suppport for bundles
+  o reduce resident size by 9MB aka 30% (#31860)
 
 Version 2.38 - 20 March 2008, Thierry Vignaud
 
